# TensR

./: .gitignore  CMakeLists.txt  README.md  TensRR.hpp  benchmark.txt  deprecatedFiles.md  desing.md  main  main.cpp
TensR/TensR/: TensR.vcxproj  tensrKernel.cu  tensrKernel.cuh
core/: tensr_static.inl
include/: Config.h  DeviceType.h  IndexUtils.hpp  Tensr.h  TensrBroadcast.h  TensrExpr.h  TensrLens.h  TensrMath.h  TensrOps.h  TensrOps.hpp  TensrUtils.hpp  allocator.hpp  indexUtils.hpp  tensr.hpp  tensrBASE.h  tensrBase.hpp  tensrBroadcast.hpp  tensrCUDA.cuh  tensrLazy.hpp  tensrLens.hpp  tensrOps_decl.hpp  tensrOps_imp.hpp  tensrOverload.hpp  tensrREAL.h  tensrSTATIC.h  tensrSugar.hpp  tensrUtils.hpp  tensrVIEW.h  tensr_interface.hpp  tensr_metadata.hpp  tensr_static.h  tensr_static.hpp  tensr_utils.h  tensr_utils.hpp  tensr_view.h  tensr_view.hpp
include/CUDA/: cudaKernels.cu  tensrCUDA.cu  tensrCUDA.cuh  tensrCUDA.h
include/benchmark/: benchmark_get_cpu_info.hpp  benchmark_get_gpu_info.hpp  benchmark_get_mem_info.hpp  benchmark_performance.hpp  benchmark_utils.hpp  benchmark_write_read_file.hpp  tensr_benchmark.hpp
include/cuda/: cuda_backend.cu  cuda_tensr_api.cu  tensr_cuda_api.cuh
include/tensr/: LazyEval.hpp  LazyOps.hpp  Lens.hpp  Tensr.hpp  TensrTraits.hpp
include/tensr/ops/: Arithmetic.hpp  Broadcast.hpp
include/tensr/util/: Error.hpp  IndexUtils.hpp  TensrUtils.hpp
src/: Lens.cpp  Tensr.cpp  TensrOps.cpp  tensr.cpp
tests/: main.cpp
